// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils scriptLoader attaches a script tag 1`] = `
<body>
  <script
    defer=""
    src="http://ga.com"
    type="text/javascript"
  />
  <script />
</body>
`;

exports[`Utils scriptLoader attaches a script tag with custom attributes 1`] = `
<body>
  <script
    defer=""
    src="http://ga.com"
    title="ga"
    type="text/javascript"
  />
  <script />
</body>
`;

exports[`Utils scriptLoader can replace defaults with custom attributes 1`] = `
<body>
  <script
    src="http://ga.com"
    type="module"
  />
  <script />
</body>
`;
